[workspace]
members = ["common", "kctxd"]
resolver = "3"

[workspace.package]
name = "kctx"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
clap = { version = "4.5.40", features = ["string"] }
dirs = { version = "6.0.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
thiserror = { version = "2.0.12" }