[workspace]
members = ["common", "kctxd"]
resolver = "3"

[workspace.package]
name = "kctx"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
async-trait = { version = "0.1.89" }
axum = { version = "0.8.4" }
clap = { version = "4.5.42", features = ["string"] }
dirs = { version = "6.0.0" }
log = { version = "0.4.28" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.143" }
thiserror = { version = "2.0.17" }
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.16" }