[package]
name = "kctxd"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kctxd"
path = "src/bin/main.rs"

[dependencies]
anyhow = { version = "1.0.98" }
async-trait.workspace = true
axum.workspace = true
clap.workspace = true
common = { path = "../common" }
dirs.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true