[package]
name = "kctxd"
edition.workspace = true
version.workspace = true

[[bin]]
name = "kctxd"
path = "src/bin/main.rs"

[dependencies]
async-trait.workspace = true
axum.workspace = true
clap.workspace = true
common = { path = "../common" }
dirs.workspace = true
log.workspace = true
structured-logger = { version = "1.0.4" }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true